[REFACTOR] 카테고리별 새로운 정책 조회 API 분리